# Bass-Enhancer

./: CMakeLists.txt  Plugin Features.rtf  README.md
Source/: AdaptiveProcessor.cpp  AdaptiveProcessor.h  DecisionEngine.cpp  DecisionEngine.h  FeatureExtractor.cpp  FeatureExtractor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
